# todos-app

./: db.sqlite3  pyproject.toml
todos_app/: admin.py  models.py  serializer.py  views.py
todos_app/migrations/: 0001_initial.py
todos_project/: settings.py  urls.py
